# space-invaders

./: .gitignore  CMakeLists.txt  LICENSE
include/: config.hh  context.hh  event_handler.hh  image.hh  image_loader.hh  key_state.hh  point2D.hh  sdl_context.hh  sdl_image.hh  sdl_image_loader.hh  sdl_window.hh  window.hh
include/game/: entity.hh
include/sdl/: sdl_event_handler.hh  sdl_image.hh  sdl_image_loader.hh  sdl_window.hh
src/: main.cc  point2D.cc  sdl_context.cc  sdl_event_handler.cc  sdl_image.cc  sdl_image_loader.cc  sdl_window.cc  window.cc
src/game/: entity.cc
src/sdl/: sdl_context.cc  sdl_event_handler.cc  sdl_image.cc  sdl_image_loader.cc  sdl_window.cc
