CMAKE_MINIMUM_REQUIRED(VERSION 2.8.9)

cmake_policy(SET CMP0004 OLD)

PROJECT( spaceInvaders )

FIND_PACKAGE( SDL2 REQUIRED )

if(CMAKE_COMPILER_IS_GNUCXX OR ${CMAKE_CXX_COMPILER_ID} STREQUAL "Clang")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x -Wall -fvisibility=hidden")
endif()

FILE(GLOB_RECURSE sources ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cc)
FILE(GLOB_RECURSE includes ${CMAKE_CURRENT_SOURCE_DIR}/include/*.hh)

INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${SDL2IMAGE_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)

ADD_EXECUTABLE(spaceInvaders ${sources} ${includes})
target_link_libraries(spaceInvaders ${SDL2_LIBRARIES} ${SDL2IMAGE_LIBRARIES})

# source_group("SDL Headers" ${CMAKE_CURRENT_SOURCE_DIR}/include/sdl)
# source_group("SDL Sources" ${CMAKE_CURRENT_SOURCE_DIR}/src/sdl)

